alteração nas páginas de  index.js e index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="PT-BR">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +11,8 @@
 
     <meta property="og:title" content="<%= htmlWebpackPlugin.options.title %>">
     <meta property="og:description" content="<%= htmlWebpackPlugin.options.description %>">
-    <meta property="og:site_name" content="jagullo.fr">
-    <meta property="og:url" content="https://jagullo.fr/">
+    <meta property="og:site_name" content="Samuel.ziger">
+    <meta property="og:url" content="https://meu-portfolio-vue-chi.vercel.app/>
     <meta property="og:image" content="<%= BASE_URL %>static/opengraph-image.jpg">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="fr_FR">
@@ -41,15 +41,15 @@
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "jagullo.fr",
-        "url": "https://jagullo.fr/",
+        "name": "Samuel.ziger",
+        "url": "https://meu-portfolio-vue-chi.vercel.app/",
         "abstract": "<%= htmlWebpackPlugin.options.description %>",
         "license": "https://github.com/julienagullo/portfolio-vue/blob/master/LICENSE.md",
         "usageInfo": "https://github.com/julienagullo/portfolio-vue/blob/master/README.md",
         "author": {
           "@type": "Organization",
-          "name": "jagullo.fr",
-          "url": "https://jagullo.fr/"
+          "name": "Samuel.Ziger",
+          "url": "https://meu-portfolio-vue-chi.vercel.app/"
         }
       }
     </script>
