Verificação de url

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="<%= htmlWebpackPlugin.options.title %>">
     <meta property="og:description" content="<%= htmlWebpackPlugin.options.description %>">
     <meta property="og:site_name" content="Samuel.ziger">
-    <meta property="og:url" content="https://meu-portfolio-vue-chi.vercel.app/>
+    <meta property="og:url" content="https://jagullo.fr/">
     <meta property="og:image" content="<%= BASE_URL %>static/opengraph-image.jpg">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="fr_FR">
@@ -42,14 +42,14 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Samuel.ziger",
-        "url": "https://meu-portfolio-vue-chi.vercel.app/",
+        "url": "https://jagullo.fr/",
         "abstract": "<%= htmlWebpackPlugin.options.description %>",
         "license": "https://github.com/julienagullo/portfolio-vue/blob/master/LICENSE.md",
         "usageInfo": "https://github.com/julienagullo/portfolio-vue/blob/master/README.md",
         "author": {
           "@type": "Organization",
-          "name": "Samuel.Ziger",
-          "url": "https://meu-portfolio-vue-chi.vercel.app/"
+          "name": "Samuel.ziger",
+          "url": "https://jagullo.fr/"
         }
       }
     </script>
